@@ -25,6 +25,7 @@ class EnvTest : public CppUnit::TestFixture
     CPPUNIT_TEST      (createCloseTest);
     CPPUNIT_TEST      (createCloseOpenCloseTest);
     CPPUNIT_TEST      (createCloseOpenCloseWithDatabasesTest);
+    CPPUNIT_TEST      (readOnlyTest);
     CPPUNIT_TEST      (openFailCloseTest);
     CPPUNIT_TEST      (openWithKeysizeTest);
     CPPUNIT_TEST      (createWithKeysizeTest);
@@ -170,6 +171,49 @@ public:
 
         CPPUNIT_ASSERT_EQUAL(0, ham_env_delete(env));
         CPPUNIT_ASSERT_EQUAL(0, ham_delete(db));
+    }
+
+    void readOnlyTest(void)
+    {
+        ham_db_t *db;
+        ham_env_t *env;
+        ham_key_t key;
+        ham_record_t rec;
+        ham_cursor_t *cursor;
+        ::memset(&key, 0, sizeof(key));
+        ::memset(&rec, 0, sizeof(rec));
+
+        CPPUNIT_ASSERT_EQUAL(0, ham_new(&db));
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_new(&env));
+
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_create(env, ".test", 0, 0664));
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_create_db(env, db, 333, 0, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_close(db));
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_close(env));
+
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_open(env, ".test", HAM_READ_ONLY));
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_open_db(env, db, 333, 0, 0));
+
+        CPPUNIT_ASSERT_EQUAL(0, ham_cursor_create(db, 0, 0, &cursor));
+        CPPUNIT_ASSERT_EQUAL(HAM_DB_READ_ONLY, 
+                ham_env_create_db(env, db, 444, 0, 0));
+
+        CPPUNIT_ASSERT_EQUAL(HAM_DB_READ_ONLY, 
+                ham_insert(db, 0, &key, &rec, 0));
+        CPPUNIT_ASSERT_EQUAL(HAM_DB_READ_ONLY, 
+                ham_erase(db, 0, &key, 0));
+        CPPUNIT_ASSERT_EQUAL(HAM_DB_READ_ONLY, 
+                ham_cursor_replace(cursor, &rec, 0));
+        CPPUNIT_ASSERT_EQUAL(HAM_DB_READ_ONLY, 
+                ham_cursor_insert(cursor, &key, &rec, 0));
+        CPPUNIT_ASSERT_EQUAL(HAM_DB_READ_ONLY, 
+                ham_cursor_erase(cursor, 0));
+
+        CPPUNIT_ASSERT_EQUAL(0, ham_cursor_close(cursor));
+        CPPUNIT_ASSERT_EQUAL(0, ham_close(db));
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_close(env));
+        ham_delete(db);
+        ham_env_delete(env);
     }
 
     void openFailCloseTest(void)
